--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,3 +1,21 @@
+.contact_header {
+  padding-top: 3rem;
+  background-color: #fff;
+  width: 100%;
+}
+
+.contact_header > h2 {
+  padding: 3rem;
+  margin-left: 13.3rem;
+  font-size: 4rem;
+  /* color: var(--alternative-color-four); */
+  color: rgba(0, 0, 0, 0.76);
+  text-shadow: 1px 3px 6px rgba(0, 0, 0, 0.76);
+  /* text-shadow: 3px 6px 9px var(--alternative-color-four); */
+  line-height: 1.3;
+  font-weight: 900;
+}
+
 .contact {
   display: flex;
   flex-direction: row;
@@ -20,11 +38,17 @@
 }
 
 @media (max-width: 768px) {
+  .contact_header > h2 {
+    font-size: 3rem;
+    text-align: center;
+    margin-left: 0;
+  }
+
   .contact {
-    padding: 1rem 1.3rem;
+    padding: 1rem 1.5rem;
   }
   .contact_container {
-    margin-top: 5rem;
+    margin-top: 1rem;
     margin-bottom: 3rem;
   }
 }
