--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -24,7 +24,7 @@
 
 @media (max-width: 699px) {
   .footer > p {
-    font-size: 0.95rem;
+    font-size: 0.85rem;
     font-weight: 300;
     line-height: 1.6;
   }
